--- a/usr/share/applications/extras/Bakup.desktop
+++ b/usr/share/applications/extras/Bakup.desktop
@@ -47,14 +47,20 @@
 # Confira algumas das opções e uma breve explicação sobre os parâmetros do arquivo .desktop:
 
 
-# O tipo como listado acima
+# Tipo do atalho criado, os três tipos disponíveis são: Application, Link, FSDevice e 
+# Directory, que definem respectivamente atalhos para aplicativos, ligações web, 
+# sistemas de arquivos e diretórios.
+
 Type=Application
 
 # A versão da especificação de entrada de desktop com a qual este arquivo está em conformidade
 Version=1.0
 
+# Codificação usada para escrever esse arquivo
+# Encoding=UTF-8
+
 # Nome da aplicação.
-Name=Criar atalho
+Name=Bakup
 Name[am]=
 Name[ar]=
 Name[bg]=
@@ -89,7 +95,7 @@ Name[nl]=
 Name[no]=
 Name[pl]=
 Name[pt]=
-Name[pt_BR]=Criar atalho
+Name[pt_BR]=Bakup
 Name[ro]=
 Name[ru]=
 Name[sk]=
@@ -107,7 +113,7 @@ Name[zh_CN]=
 Name[zh_TW]=
 
 
-GenericName=Criar atalho
+GenericName=Bakup
 GenericName[ar]=
 GenericName[bg]=
 GenericName[ca]=
@@ -158,7 +164,7 @@ GenericName[vi]=
 
 
 # Um comentário que pode/será usado como uma dica da ferramenta / Descrição da aplicação.
-Comment=Cria um arquivo .desktop para seu aplicativo no Linux.
+Comment=Realiza o backup dos itens mas importante do usuário.
 Comment[ar]=
 Comment[bg]=
 Comment[bn]=
@@ -192,7 +198,7 @@ Comment[nl]=
 Comment[or]=
 Comment[pl]=
 Comment[pt]=
-Comment[pt_BR]=Cria um arquivo .desktop para seu aplicativo no Linux.
+Comment[pt_BR]=Realiza o backup dos itens mas importante do usuário.
 Comment[ro]=
 Comment[ru]=
 Comment[sk]=
@@ -214,17 +220,17 @@ Comment[zh_TW]=
 Path=
 
 # O executável do aplicativo, possivelmente com argumentos / Diretório do arquivo executável. / link do site
-Exec=xfce4-terminal --maximize --title="Criando atalho..." -e "/usr/local/bin/criar-atalho-desktop.sh"
+Exec=xfce4-terminal --maximize --title="Backupando..." -e "su -c '/usr/local/bin/backup.sh' "
 
 # O nome do ícone que será usado para exibir esta entrada
-Icon=/usr/share/icons/hicolor/48x48/apps/parole-extension.png
+Icon=/usr/share/icons/hicolor/48x48/apps/uget-icon.png
 
 
 # Descreve se este aplicativo precisa ser executado em um terminal ou não
 Terminal=FALSE
 
 # Notificação de inicialização
-StartupNotify=TRUE
+StartupNotify=FALSE
 
 
 # Descreve as categorias nas quais esta entrada deve ser mostrada
@@ -233,7 +239,7 @@ Categories=System;
 
 # Palavras-chave para encontrar a aplicação. Deve  ser separada por ;
 
-Keywords=atalho;desktop;icone;site;criar;programa;AppImage;aplicacao;lançador;applications;gnome;kde;mate;xfce;aplicacao;
+Keywords=backup;restauracao;salvar;restaurar;proteger;seguranca;backpeado;compactado;reinstalar;backpear;jogos;software;usuario;dados;becape;cinnamon;rede;streaming;timeshift;dd;cp;mv;git;criptografar;wine;kodi;qmmp;gimp;ssr;tar;fluxbox;icewm;kde;vlc;qmmp;vokoscreen;simplescreenrecorder;thunar;grub;xmenu;chrome;pidgin;netbeans;hexchat;libreoffice;skype;teamviewer;anydesk;steam;amsn;goldendict;kodi;stella;mame;pcsxr;snes9x;clementine;transmission;wine;flatpak;evolution;obs;cinnamon;mate;gnome;apt-get;apt;qbittorrent;dns;apache;hosts;picom;xfce;ppp;openshot;audacity;uca.xml;bashrc;alias;fstab;fonts;cron;modelos;ocomon;mysql;MariaDB;skel;conky;mpv;idesk;volumeicon;plank;audacious;sendto;icons;themes;playonlinux;lightdm;chromium;onlyoffice;brave;opera;openbox;polybar;i3wm;i3;i3blocks;liferea;shotcut;kdenlive;autostart;applications;samba;NetworkManager;mimeapps;wvdial;freshclam;clamav;jgmenu;firefox;thunderbird;conky;virtualbox;goldendict;netbeans;anydesk;audacity;dropbox;pendrive;criptografia;ssd;hd;dvd;SMART;tarefa;dados;nuvem;restore;
 # Keywords[pt]=;
 # Keywords[pt_BR]=;
 
@@ -247,4 +253,7 @@ Keywords=atalho;desktop;icone;site;criar;programa;AppImage;aplicacao;lançador;a
 
 
 # MimeType= ;
+
+
+
 
